# learning-kivy

./: .gitignore  README.md  _deploy_tips.txt  calorie_app.db  how2deploy.txt  pong_paddle.py  pyproject.toml
.github/workflows/: codeql.yml  github-actions-demo.yml
calorie-count/: .gitignore  Calorie_Counting.xlsx  Calorie_Counting_2022-11-28.xlsx  buildozer.spec  calorie_app  calorie_app.db  daily_screen.py  external_foods  main.py  meal_add_dialog.py  plotting.py  pylint.rc  requirements.txt  todo.txt  utils.py
calorie-count/DB/: config.ini  food_db.py  meal_db.py  meal_entry_db.py
calorie-count/DB/online/: connect.py  parsing.py
calorie-count/dialogs/: meal_add_dialog.py  meal_search.py  meal_search_dialog.py
calorie-count/kv_files/: daily_screen.kv  entry_add_screen.kv  foods_screen.kv  main.kv  meals_screen.kv  nav_drawer.kv  trends_screen.kv
calorie-count/lib/kmplot/: backend_kivy.py  backend_kivyagg.py
calorie-count/lib/theme/: picker.py
calorie-count/screens/: daily_screen.py  food_add_dialog.py  food_search.py  meal_add_dialog.py  meal_search.py
calorie-count/src/: main.py
calorie-count/utils/: plotting.py  xlsx.py
calorie_count/: __main__.py  requirements.txt  todo.txt
calorie_count/src/: consts.py  main.py
calory-count/: .gitignore  buildozer.spec  main.kv  main.py  meal_add_dialog.py  meal_db.py  meals  plotting.py  todo.txt  utils.py
calory-count/DB/: meal_db.py  meal_entry_db.py
calory-count/kv_files/: main.kv  trends_screen.kv
kivy-pong/: README.md  main.py  pong.kv  pong_ball.py
widgets-doodle/: input.py
(+42 files in other folders)
