[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calorie_count"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "kivy>=2.3.0",
    "kivymd==1.2.1",
    "sqlalchemy>=2.0.35",
    "matplotlib==3.9.2",
    "openpyxl==3.1.5",
    "pylint==3.3.1"
]

[project.scripts]
calorie-app = "calorie_count.__main__:main"
